--- a/SistemaPedidos.API/SistemaPedidos.API/appsettings.json
+++ b/SistemaPedidos.API/SistemaPedidos.API/appsettings.json
@@ -2,11 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "System.Net.Http.HttpClient": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=SistemaPedido;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "ValidacionExterna": {
+    "BaseUrl": "https://jsonplaceholder.typicode.com",
+    "TimeoutSeconds": 10,
+    "LimiteTotal": 100
   }
 }
