Se sube versión funcional
- Se sube versión funcional de aplicación

--- a/SistemaPedidos.API/SistemaPedidos.API/appsettings.json
+++ b/SistemaPedidos.API/SistemaPedidos.API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SistemaPedido;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=SistemaPedido;User Id=pedidos_user;Password=Pedidos2024!;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "ValidacionExterna": {
     "BaseUrl": "https://jsonplaceholder.typicode.com",
