Manejo de excepciones
- Se realiza una manejo de excepciones más detallado
- Se agrega un middleware
- Se agregan validaciones
- Se agrega README
- Se agrega documentacion
- Se agrega indices para busquedas
- Se agrega archivo de logging adicional a consola

--- a/SistemaPedidos.API/SistemaPedidos.API/appsettings.json
+++ b/SistemaPedidos.API/SistemaPedidos.API/appsettings.json
@@ -3,7 +3,15 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning",
-      "System.Net.Http.HttpClient": "Information"
+      "Microsoft.AspNetCore.Hosting": "Information",
+      "Microsoft.AspNetCore.Routing": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning",
+      //"Microsoft.EntityFrameworkCore.Database.Command": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+      "Microsoft.EntityFrameworkCore.Infrastructure": "Warning",
+      "System.Net.Http.HttpClient": "Information",
+      "System.Net.Http.HttpClient.JSONPlaceholder.LogicalHandler": "Information",
+      "System.Net.Http.HttpClient.JSONPlaceholder.ClientHandler": "Information"
     }
   },
   "AllowedHosts": "*",
@@ -13,6 +21,42 @@
   "ValidacionExterna": {
     "BaseUrl": "https://jsonplaceholder.typicode.com",
     "TimeoutSeconds": 10,
-    "LimiteTotal": 100
+    "LimiteTotal": 100000
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
+        "Microsoft.AspNetCore.Hosting": "Information",
+        "Microsoft.EntityFrameworkCore": "Warning",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning",
+        "Microsoft.EntityFrameworkCore.Infrastructure": "Warning",
+        "System": "Warning",
+        "System.Net.Http.HttpClient": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "{Timestamp:HH:mm:ss} [{Level:u3}] {SourceContext:l}{NewLine}      {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "D:\\Logs\\SistemaPedidos\\log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 30,
+          "fileSizeLimitBytes": 10485760,
+          "rollOnFileSizeLimit": true,
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {SourceContext}{NewLine}{Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   }
 }
