--- a/SistemaPedidos.API/SistemaPedidos.Application/SistemaPedidos.Application.csproj
+++ b/SistemaPedidos.API/SistemaPedidos.Application/SistemaPedidos.Application.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.24" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
